# keyboard_tester

./: Readme.md
cpp-core/include/: keyboard_core.h
cpp-core/src/: device_manager.cpp  device_manager.h  keyboard_core.cpp  keyboard_manager.cpp  keyboard_manager.h
rust-ui/: Cargo.toml  build.rs  settings.json
rust-ui/src/: app.rs  ffi.rs  keyboard.rs  main.rs  settings.rs
rust-ui/src/ui/: about.rs  devices.rs  diagnostics.rs  keyboard.rs  settings.rs  sidebar.rs  statusbar.rs
