[package]
name = "rust-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
eframe = "0.35.0"
egui = "0.35.0"
env_logger = "0.11.11"
image = "0.25.9"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }
winit = "0.30.13"
